--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-article, aside, figure, figcaption, footer, hgroup, header, 
+aside, figure, figcaption, footer, hgroup, header, 
 section, nav {
    display: block;
 }
@@ -7,7 +7,8 @@ section, nav {
 /* Set the default page element styles */
 
 body {
-   background: WHITE;
+   background-image: url("images/background.jpg");
+   background-repeat: repeat-y;
    color: #AAAE7F;
    margin: 0 auto;
    text-align: center;
@@ -23,52 +24,92 @@ body * {
 }
 
 /* Main Section Styles */
-section#page {
-   background: White;
-   border-right: 1px solid Black; 
-   border-left: 1px solid Black;
-   margin: 0px auto;
-
-
-}
-
+div.column2{
+   padding: 15px;
+   background-image: url("images/background.jpg");
+ }
+div.uploads{
+   margin-left: auto;
+   margin-right: auto;
+   background-color: #f7f7f7;  
+   width: 40%; 
+} 
+div{
+    height: auto;
+ }
+div.column{
+   margin: auto;
+   clear: none;
+   width: 35%;
+   padding: 15px;
+ }
+ div.column1{
+   float: left;
+   position: fixed;
+   top: 0px;
+   left: 0px;
+   clear: none;
+   width: 170px;
+   height: 100%;
+   padding: 10px;
+   background-color: #D0D6B3;
+   background-repeat: repeat-y;
+   box-shadow:0 2px 5px 0 #143109,0 2px 10px 0 #143109;
+ }
 .img {
    max-width: 100%; 
    max-height: 100%; 
    display: block; 
-   margin: auto; 
 }
 /* Header styles */
    
 header.main {
    height: 50px;
 }
+.uploads{
+   width: 100%;
+   padding: 12px 20px;
+   margin: 8px 0;
+   box-sizing: border-box;
+}
+.note{
+   width: 100%;
+   height: 150px;
+   width: 200px;
+}
+
 
 /* Navigation lists */
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1049px) {
   nav.horizontal {
     display: none;
   }
   div.navButton {
 	 display: inline;
   }
+  div.column1{
+   display: none;
+  }
 }
-@media screen and (min-width: 849px) {
+@media screen and (min-width: 1050px) {
   div.navButton {
 	 display: none;
   }
     nav.horizontal {
     display: inline;
   }
+  div.column1{
+   display: inline;
+  }
 }
 div.navButton {
-	right:10%;
+	right: 10%;
 	float: right;
 	position: relative;
 }
 .sidebar{
 	height:100%;
-	width:60%;
+	width: 350px;
 	background-color:#AAAE7F;
 	position:fixed!important;
 	z-index:20;
@@ -149,7 +190,7 @@ div.NavSideBar{
 	display: none;
 }
 #navbar {
-	background-color: #143109;
+	background-color: #d0d6b3;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -157,15 +198,16 @@ div.NavSideBar{
 	transition: top 0.3s;
 	height: 50px;
 	z-index: 10;
+   box-shadow:0 2px 5px 0 #143109,0 2px 10px 0 #143109;
 }
 nav.horizontalimg{
-	right: -10%;
+	left: 5px;
 	float: left;
    position: relative;
    transition: top 0.3s;
 }
 nav.horizontal {
-	right: 10%;
+	right: 5%;
    width: 70%;
    position: relative;
    transition: top 0.3s;
@@ -200,68 +242,55 @@ nav.horizontal ul li a:hover {
 }
 
 /* article styles */
-article {
-   width: 100%;
+.all-articles {
+   width: 75%;
+   margin: 0;
+   padding: 0px;
+   background-color: #d0d6b3;
+   margin-left: auto;
+   margin-right: auto;
 }
 .main-container {
-  float: left;
-  position: relative;
-  left: 50%;
+  background: white;
+  margin: 25px;
+  padding: 0%;
 }
-.fixer-container {
-  float: left;
-  position: relative;
-  left: -50%;
-}
-article hgroup {
-   background-color: White;
-   color: White;
-   text-shadow: black 3px 3px 10px;
-}
-
-
-article hgroup h1 {
-   font-size: 24px;
-   font-family: 'Trebuchet MS', Helvetica, sans-serif;
-   letter-spacing: 2px;
-   margin-left: 15px;
-   padding: 20px 0px -5px 0px;
-}
-
-article hgroup h2 {
-   font-size: 18px;
-   font-family: 'Trebuchet MS', Helvetica, sans-serif;
-   letter-spacing: 2px;
-   margin-left: 15px;
-   padding: 0px 0px 20px 0px;
-}
-
-article hgroup img {
-   float: none;
+.main-container > h4, h5, p {
    margin: 0px;
+   font-size: 90%;
+ }
+
+h1 {
+   color: #f7f7f7;
+   font-size: 32px;
+   font-weight: bold;
 }
 
-article img {
-   float: left;
-   margin: 10px 10px 10px 20px;
+h1.dark-green {
+   color: #143109;
+   font-size: 32px;
+   font-weight: bold;
 }
 
-article p {
-   font-size: 20px;
-   margin: 10px 10px 10px 0px;
+h2 {
+   color: #f7f7f7;
+   font-size: 26px;
 }
 
-article h2 {
-  clear: left;
-   font-size: 18px;
-   font-family: 'Trebuchet MS', Helvetica, sans-serif;
-   letter-spacing: 2px;
-   text-indent: 20px;
-   padding: 10px 0px;
-   background-color: #D0D6B3;
-   color: White;
-   text-shadow: black 3px 3px 10px;
+h3 {
+   color: #AAAE7F;
+   font-size: 32px;
+   font-weight: bold;
 }
+h4 {
+   color: #AAAE7F;
+   font-size: 32px;
+}
+h5 {
+   color: #AAAE7F;
+   font-size: 24px;
+}
+
 
 article ul {
    margin: 10px 0px 10px 20px;
@@ -303,7 +332,6 @@ img.limg {
 footer {
    border-top: 1px solid black;
    border-bottom: 1px solid black;
-   background-color: White;
    clear: left;
    font-size: 1em;
    height: 30px;
